fixing of majority of visible bugs

--- a/src/app/pages/booklist/components/booklist-filter/booklist-filter.component.scss
+++ b/src/app/pages/booklist/components/booklist-filter/booklist-filter.component.scss
@@ -37,6 +37,6 @@
 
 .clean__btn:disabled {
   &:hover {
-    color: rgb(17, 24, 39);
+    background-color: transparent;
   }
 }
